clean up NamesList.html

--- a/unicodetools/data/ucd/dev/NamesList.html
+++ b/unicodetools/data/ucd/dev/NamesList.html
@@ -36,7 +36,7 @@
     <tbody>
       <tr>
         <td valign="top" width="144">Revision</td>
-        <td valign="top" class="changed">15.0.0 (beta review draft)</td>
+        <td valign="top">15.0.0</td>
       </tr>
       <tr>
         <td valign="top" width="144">Authors</td>
@@ -44,7 +44,7 @@
       </tr>
       <tr>
         <td valign="top" width="144">Date</td>
-        <td valign="top">2022-05-03</td>
+        <td valign="top">2022-08-08</td>
       </tr>
       <tr>
         <td valign="top" width="144">This Version</td>
