--- a/unicodetools/data/uca/dev/CollationTest.html
+++ b/unicodetools/data/uca/dev/CollationTest.html
@@ -67,14 +67,9 @@
   separator. Between the bars are the primary, secondary, tertiary, and quaternary weights (if any), 
   in hex.</p>
   <blockquote>
-    <table class="noborder" border="0" cellpadding="2" cellspacing="0">
-      <tbody><tr>
-        <th class="noborder" align="left" valign="top" width="1%"><b>Note:</b></th>
-        <td class="noborder" valign="top">The sort key is purely informational. UCA does <i>not</i> 
-        require the production of any particular sort key, as long as the results of comparisons 
-        match.</td>
-      </tr>
-    </tbody></table>
+    <p><b>Note:</b> The sort key is purely informational. UCA does <i>not</i>
+    require the production of any particular sort key, as long as the results of comparisons
+    match.</p>
   </blockquote>
 
   <h2>Testing</h2>
