Generate Emoji 15.0 charts

--- a/unicodetools/src/main/resources/org/unicode/tools/emoji/main-index.html
+++ b/unicodetools/src/main/resources/org/unicode/tools/emoji/main-index.html
@@ -79,7 +79,7 @@ There are two approaches for disabling the text autosizer feature:
               <td>Emoji recently added to Emoji v%%VERSION%%.</td>
             </tr>
             <tr>
-              <td >Emoji Candidates<br>
+              <td>Emoji Candidates<br>
                 <span style='white-space: nowrap'>
                 <a target='candidates' href="../future/emoji-provisional.html">Provisional</a> •
                 <a target='candidates' href="../future/emoji-candidates.html">Draft</a></span></td>
@@ -88,13 +88,13 @@ There are two approaches for disabling the text autosizer feature:
                 for a future version of emoji.</td>
             </tr>
             <tr>
-              <td ><a target='zwj' href="emoji-zwj-sequences.html">Emoji
+              <td><a target='zwj' href="emoji-zwj-sequences.html">Emoji
                 ZWJ Sequences</a></td>
               <td>Recommended <em>emoji zwj sequences</em> for Emoji v%%VERSION%%. </td>
             </tr>
             <!--
 		<tr>
-			<td ><a target='annotate'
+			<td><a target='annotate'
 				href="emoji-annotations.html">Emoji Annotations</a></td>
 			<td>Shows characters grouped by annotation, based on <a
 				href="https://unicode.org/repos/cldr/trunk/common/annotations/">data
@@ -111,14 +111,14 @@ There are two approaches for disabling the text autosizer feature:
               <th colspan='2'>Sort Order &amp; Counts</th>
             </tr>
             <tr>
-              <td ><a target='order' href="emoji-ordering.html">Emoji
+              <td><a target='order' href="emoji-ordering.html">Emoji
                 Ordering</a></td>
               <td>The Emoji v%%VERSION%% characters and sequences in the
                 recommended sort order, which groups like characters together;
                 using <a href='https://cldr.unicode.org/' target='cldr'>CLDR</a> data. </td>
             </tr>
             <tr>
-              <td ><a target='counts' href="emoji-counts.html">Emoji
+              <td><a target='counts' href="emoji-counts.html">Emoji
                 Counts</a></td>
               <td>Detailed counts of the Emoji v%%VERSION%% characters and sequences.</td>
             </tr>
@@ -126,11 +126,11 @@ There are two approaches for disabling the text autosizer feature:
               <th colspan='2'>Versions</th>
             </tr>
              <tr>
-              <td class='changed'><a target='proposals' href="emoji-proposals.html">Emoji Proposals</a></td>
-              <td class='changed'>Proposals for accepted emoji characters.</td>
+              <td><a target='proposals' href="emoji-proposals.html">Emoji Proposals</a></td>
+              <td>Proposals for accepted emoji characters.</td>
             </tr>
             <tr>
-              <td ><a target='versions' href="emoji-versions.html">Emoji
+              <td><a target='versions' href="emoji-versions.html">Emoji
                 Versions</a></td>
               <td>When emoji characters were added to Unicode.</td>
             </tr>
@@ -140,7 +140,7 @@ There are two approaches for disabling the text autosizer feature:
             </tr>
             <!--
 		<tr>
-			<td ><a target='style' href="emoji-sequences.html">Emoji
+			<td><a target='style' href="emoji-sequences.html">Emoji
 					Sequences</a></td>
 			<td>Shows emoji character sequences: keycaps, flags, and
 				modifier sequences.</td>
@@ -150,18 +150,18 @@ There are two approaches for disabling the text autosizer feature:
               <th colspan='2'>Presentation</th>
             </tr>
             <tr>
-              <td ><a target='variants' href="emoji-variants.html">Emoji
+              <td><a target='variants' href="emoji-variants.html">Emoji
                 Presentation Sequences</a></td>
               <td>The <em>emoji presentation sequences</em> for Emoji v%%VERSION%%. </td>
             </tr>
             <tr>
-              <td ><a target='text-emoji' href="text-style.html">Text
+              <td><a target='text-emoji' href="text-style.html">Text
                 vs Emoji</a></td>
               <td>A summary view of which Emoji v%%VERSION%% characters have the
                 default text style, and which have the default emoji style.</td>
             </tr>
             <tr>
-              <td ><a target='style' href="emoji-style.html">Emoji
+              <td><a target='style' href="emoji-style.html">Emoji
                 Default Style (html)</a></td>
               <td rowSpan='2'>Shows the default presentation style for
                 each Emoji v%%VERSION%% character. Separate rows show the presentation with and
@@ -171,7 +171,7 @@ There are two approaches for disabling the text autosizer feature:
                 images.</em></td>
             </tr>
             <tr>
-              <td ><a target='style' href="emoji-style.txt">Emoji
+              <td><a target='style' href="emoji-style.txt">Emoji
                 Default Style (text)</a></td>
             </tr>
           </table>
