Replace references to UTR #51 with UTS #51

--- a/unicodetools/src/main/resources/org/unicode/text/UCD/StandardizedVariants-Template.html
+++ b/unicodetools/src/main/resources/org/unicode/text/UCD/StandardizedVariants-Template.html
@@ -103,7 +103,7 @@
     <a href="https://unicode.org/emoji/charts"><em>Emoji Charts</em></a>.
     For more information about emoji variation sequences,
     including guidelines on variations in glyph shapes and colors,
-    see <a href='https://unicode.org/reports/tr51'><em>UTR #51: Unicode Emoji</em></a>.</p>
+    see <a href='https://unicode.org/reports/tr51'><em>UTS #51: Unicode Emoji</em></a>.</p>
   <blockquote>
     <p><a name="fonts"><b>Note: </b></a>The glyphs used to show the variations are often derived 
     from different physical fonts than the representative glyphs in the standard. They may therefore 
