--- a/unicodetools/src/main/resources/org/unicode/tools/emoji/main-index.html
+++ b/unicodetools/src/main/resources/org/unicode/tools/emoji/main-index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-19876713-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GC4HXC4GVQ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'UA-19876713-1');
+  gtag('config', 'G-GC4HXC4GVQ');
 </script>
 <meta http-equiv="Content-Language" content="en-us">
 <title>Unicode Emoji v%%PLAIN_VERSION%%</title>
