--- a/unicodetools/data/ucd/dev/NamesList.html
+++ b/unicodetools/data/ucd/dev/NamesList.html
@@ -100,7 +100,7 @@ a.headernav:hover {
     <tbody>
       <tr>
         <td>Revision</td>
-        <td><span class="changedspan">15.1.0 (draft 4)</span></td>
+        <td>15.1.0</td>
       </tr>
       <tr>
         <td>Authors</td>
@@ -108,17 +108,17 @@ a.headernav:hover {
       </tr>
       <tr>
         <td>Date</td>
-        <td><span class="changedspan">2023-05-09</span></td>
+        <td>2023-08-23</td>
       </tr>
       <tr>
         <td>This Version</td>
-        <td class="changed">
+        <td >
 		<a href="https://www.unicode.org/Public/15.1.0/ucd/NamesList.html">
 		https://www.unicode.org/Public/15.1.0/ucd/NamesList.html</a></td>
       </tr>
       <tr>
         <td>Previous Version</td>
-        <td class="changed">
+        <td>
 		<a href="https://www.unicode.org/Public/15.0.0/ucd/NamesList.html">
 		https://www.unicode.org/Public/15.0.0/ucd/NamesList.html</a></td>
       </tr>
@@ -203,7 +203,7 @@ their constituent syntax elements are needed.</p>
 
 <p>This section defines the overall file structure</p>
 
-<pre><strong>NAMELIST:     <span class="changedspan">FILE_COMMENT*</span> TITLE_PAGE* EXTENDED_BLOCK*</strong>
+<pre><strong>NAMELIST:     FILE_COMMENT* TITLE_PAGE* EXTENDED_BLOCK*</strong>
 
 <strong>TITLE_PAGE:   TITLE 
 		| TITLE_PAGE SUBTITLE 
@@ -214,7 +214,6 @@ their constituent syntax elements are needed.</p>
 		| TITLE_PAGE COMMENT_LINE
 		| TITLE_PAGE PAGEBREAK 
 		| TITLE_PAGE FILE_COMMENT 
-		<span class="removedspan">| FILE_COMMENT</span>
 
 
 EXTENDED_BLOCK:	BLOCK 
@@ -417,7 +416,7 @@ is machine generated and will always explicitly provide any summary subheaders.<
 <strong>NOTICE_LINE:	&quot;@+&quot; TAB LINE</strong>       
 			// Output LINE as notice
 
-<strong>		| &quot;@+&quot; TAB <span class="changedspan">&quot;*&quot;</span> SP LINE</strong>   
+<strong>		| &quot;@+&quot; TAB &quot;*&quot; SP LINE</strong>   
 			// Output LINE as notice
 			// &quot;*&quot; expands to a bullet character
 			// Notices following a character code apply to the
@@ -512,7 +511,7 @@ is machine generated and will always explicitly provide any summary subheaders.<
     <li>A VARSEL_LIST may only contain code points for standard variation selectors (including script specific ones)</li>
     <li>When displaying a VARIATION_LINE for alternate glyphs, the &quot;ALTn&quot; selector is not displayed. </li>
     <li>If a glyph is unavailable for the variant glyph in a VARIATION_LINE it is replaced by the glyph for U+2591 LIGHT SHADE.</li>
-    <li class="changed">Because a LINE or an EXPAND_LINE can itself start with a special character followed 
+    <li>Because a LINE or an EXPAND_LINE can itself start with a special character followed 
         by a SP or LF, an &quot;unmarked&quot; COMMENT_LINE should match the input in lower priority than line 
         types that require a special character or have a more restrictive set of characters than EXPAND_LINE. 
         Similarly, a SUBHEADER containing TAB &quot;!&quot; LF should match with a higher priority than those
@@ -563,10 +562,10 @@ COMMENT:	&quot;(&quot; LABEL &quot;)&quot;
        <li>When names containing code points are lowercased to make them LCNAMEs, 
          the code point values remain uppercase. Such code points by convention 
          follow a hyphen and are the last element in the name.</li>
-    <li>Special limited <span class="changedspan">lookbehind</span> logic prevents a 4 digit number for a standard, such
+    <li>Special limited lookbehind logic prevents a 4 digit number for a standard, such
     as ISO 9999 from being misinterpreted as ISO CHAR. Currently recognized are
     &quot;ISO&quot;, &quot;DIN&quot;, &quot;IEC&quot; and &quot;S X&quot; as well as &quot;S C&quot; for the JIS X and JIS C series of
-    standards. <span class="changedspan">(In addition &quot;EEE&quot; and &quot;S X&quot; are recognized for use with IEEE and KSC X standards. For the GB series of standards, &quot; GB&quot; is defined to prevent conversion to CHAR, but has no effect at the start of a line).</span> For other standards, or for four-digit years in a comment, use a
+    standards. (In addition &quot;EEE&quot; and &quot;S X&quot; are recognized for use with IEEE and KSC X standards. For the GB series of standards, &quot; GB&quot; is defined to prevent conversion to CHAR, but has no effect at the start of a line). For other standards, or for four-digit years in a comment, use a
     NOTICE_LINE instead, which prevents expansion, or use &quot;\&quot; to escape the digits.</li>
        <li>Single and double straight quotes in an EXPAND_LINE are replaced by curly quotes using English rules.
     Smart apostrophes are supported, but nested quotes are not.
@@ -581,7 +580,7 @@ COMMENT:	&quot;(&quot; LABEL &quot;)&quot;
        of following characters.</li>
        <li>The hyphen in a character range CHAR-CHAR is replaced by an EN DASH on 
        output.</li>
-       <li class="changed">In a STRING or LABEL, a Unicode character outside the range 
+       <li>In a STRING or LABEL, a Unicode character outside the range 
         U+0000..U+02FF is displayed as is, with a glyph matching
         the chart font, and not with the font that is otherwise defined for that element.</li>
        <li>The NamesList.txt file is encoded in UTF-8 if the <i>first line</i> is a 
@@ -614,15 +613,15 @@ COMMENT:	&quot;(&quot; LABEL &quot;)&quot;
     <p><b>Version 15.1.0</b></p>
         <ul>
         <li>Reissued for Unicode 15.0.0.</li>
-        <li class="changed">Adjusted NAMELIST definition to account for positions of FILE_COMMENT.</li>
-        <li class="changed">Added a note to the bullets in Section 2.1 to clarify priority of matching for
+        <li>Adjusted NAMELIST definition to account for positions of FILE_COMMENT.</li>
+        <li>Added a note to the bullets in Section 2.1 to clarify priority of matching for
         some line types.</li>
-        <li class="changed">In Section 2.2, added a note clarifying the font handling for characters
+        <li>In Section 2.2, added a note clarifying the font handling for characters
         outside the range U+0000..U+02FF occurring in NAME or LABEL elements.</li>
-        <li class="changed">Also in Section 2.2, updated the bullet about lookbehind logic
+        <li>Also in Section 2.2, updated the bullet about lookbehind logic
             for identifying digit sequences that are part of identifiers for various standards, 
             to include the detection of IEEE, KSC X, and GB standards.</li>
-        <li class="changed">Added missing quotation marks around * in second expansion for
+        <li>Added missing quotation marks around * in second expansion for
         NOTICE_LINE.</li>
         <li>Corrected and clarified the BNF statement of nameslist syntax.</li>
         <li>Some literals had not been quoted, some productions were missing the trailing LF</li>
